--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -107,7 +107,7 @@
 <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6069bb84af95c28548254801"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
-<script src="js/webflow.js" type="text/javascript"></script>
+<script src="https://assets.website-files.com/6069bb84af95c28548254801/js/webflow.3ecba2dec.js" type="text/javascript"></script>
 <!-- [if lte IE 9]>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
