opmaak fixes, logo, kleuren

--- a/src/main/resources/templates/huur-bakfiets.html
+++ b/src/main/resources/templates/huur-bakfiets.html
@@ -89,7 +89,7 @@
     .w-slider-arrow-left,
     .w-slider-arrow-right {
       cursor: pointer;
-      color: #000;
+      color: #11d2ff;
       font-size: 40px;
     }
   </style>
@@ -99,7 +99,7 @@
   <div>
     <div data-collapse="tiny" data-animation="over-right" data-duration="400" role="banner" class="navbar test w-nav">
       <div class="w-container">
-        <a href="#" class="logo w-nav-brand">
+        <a href="./" class="logo w-nav-brand">
           <div class="long-text">vanderbinckesbakfietsen</div>
         </a>
         <nav role="navigation" class="nav-menu w-nav-menu">
