--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,13 +39,13 @@
     <div data-collapse="tiny" data-animation="over-right" data-duration="400" role="banner"
          class="navbar test home w-nav">
         <div class="w-container">
-            <a href="#" class="logo w-nav-brand">
+            <a href="./" class="logo w-nav-brand">
                 <div class="long-text">vanderbinckesbakfietsen</div>
             </a>
             <nav role="navigation" class="nav-menu w-nav-menu">
                 <a href="./" aria-current="page" class="nav-link w-nav-link w--current">Home</a>
                 <a href="/huur-bakfiets" class="nav-link huur w-nav-link">HUUR BAKFIETS</a>
-                <a href="#" class="nav-link w-nav-link">Contact</a>
+                <a href="#contact" class="nav-link w-nav-link">Contact</a>
                 <a href="#" class="close-x w-hidden-main w-hidden-medium w-hidden-small">×</a>
             </nav>
             <div class="menu-button w-hidden-main w-hidden-medium w-hidden-small w-clearfix w-nav-button">
@@ -61,7 +61,7 @@
             <a href="/huur-bakfiets" class="button w-button">BEGIN NU</a>
         </div>
     </div>
-    <div class="main-section dark">
+    <div id="contact" class="main-section dark">
         <div class="w-container">
             <div class="section-heading">
                 <h2 class="white">Blijf in contact</h2>
