result page is nu mooi, heb ook footers gefixt van pagina's met nu werkende links

--- a/src/main/resources/templates/huur-bakfiets.html
+++ b/src/main/resources/templates/huur-bakfiets.html
@@ -344,13 +344,13 @@
         <div class="w-container">
           <div class="w-row">
             <div class="w-col w-col-4 w-col-small-4">
-              <a href="#" class="footer-logo w-inline-block">
+              <a href="./" class="footer-logo w-inline-block">
                 <div class="long-text">vanderbinckesbakfietsen</div>
               </a>
             </div>
             <div class="footer-links w-col w-col-8 w-col-small-8">
-              <a href="#" class="footer-link">Home</a>
-              <a href="#" class="footer-link">Over ons</a>
+              <a href="./" class="footer-link">Home</a>
+              <a href="/huur-bakfiets" class="footer-link">HUUR BAKFIETS</a>
               <a href="#contact" class="footer-link">Contact</a>
             </div>
           </div>
