--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -1,149 +1,199 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
+<!--  Last Published: Sun Apr 11 2021 17:01:07 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="6073143ced8dc655b0d18f01" data-wf-site="6069bb84af95c28548254801" lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta charset="utf-8">
+    <title>Winkelmand</title>
+    <meta content="Winkelmand" property="og:title">
+    <meta content="Winkelmand" property="twitter:title">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta content="Webflow" name="generator">
+    <link href="https://assets.website-files.com/6069bb84af95c28548254801/css/vanderbincks-c76ff7.webflow.e13cdbde4.css"
+          rel="stylesheet" type="text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Great+Vibes:400%7CChanga+One:400,400italic"
+          media="all">
+    <script type="text/javascript">WebFont.load({google: {families: ["Great Vibes:400", "Changa One:400,400italic"]}});</script>
+    <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"
+            type="text/javascript"></script><![endif]-->
+    <script type="text/javascript">!function (o, c) {
+        var n = c.documentElement, t = " w-mod-";
+        n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
+    }(window, document);</script>
+    <link href="https://assets.website-files.com/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <link href="https://assets.website-files.com/img/webclip.png" rel="apple-touch-icon">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+          integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
     <style>
-        body {
-            font-family: Arial;
-            font-size: 17px;
-            padding: 8px;
+
+        .p-2 {
+            padding: .5rem !important;
+            text-align: left;
         }
 
-        * {
-            box-sizing: border-box;
+        .nav-link {
+            display: inline-block;
+            padding: 10px 20px;
         }
 
-        .row {
-            display: -ms-flexbox; /* IE10 */
-            display: flex;
-            -ms-flex-wrap: wrap; /* IE10 */
-            flex-wrap: wrap;
-            margin: 0 -16px;
-        }
-
-        .col-25 {
-            -ms-flex: 25%; /* IE10 */
-            flex: 25%;
-        }
-
-        .col-50 {
-            -ms-flex: 50%; /* IE10 */
-            flex: 50%;
-        }
-
-        .col-75 {
-            -ms-flex: 75%; /* IE10 */
-            flex: 75%;
-        }
-
-        .col-25,
-        .col-50,
-        .col-75 {
-            padding: 0 16px;
-        }
-
-        .container {
-            background-color: #f2f2f2;
-            padding: 5px 20px 15px 20px;
-            border: 1px solid lightgrey;
-            border-radius: 3px;
-        }
-
-        input[type=text] {
-            width: 100%;
-            margin-bottom: 20px;
-            padding: 12px;
-            border: 1px solid #ccc;
-            border-radius: 3px;
-        }
-
-        label {
-            margin-bottom: 10px;
-            display: block;
-        }
-
-        .icon-container {
-            margin-bottom: 20px;
-            padding: 7px 0;
-            font-size: 24px;
-        }
-
-        .btn {
-            background-color: #4CAF50;
-            color: white;
-            padding: 12px;
-            margin: 10px 0;
-            border: none;
-            width: 100%;
-            border-radius: 3px;
-            cursor: pointer;
-            font-size: 17px;
-        }
-
-        .btn:hover {
-            background-color: #45a049;
-        }
-
-        a {
-            color: #2196F3;
-            text-decoration: none;
-        }
-
-        hr {
-            border: 1px solid lightgrey;
-        }
-
-        span.price {
-            float: right;
-            color: grey;
-        }
-
-        /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other (also change the direction - make the "cart" column go on top) */
-        @media (max-width: 800px) {
-            .row {
-                flex-direction: column-reverse;
-            }
-            .col-25 {
-                margin-bottom: 20px;
+        @media screen and (max-width: 479px) {
+            .nav-link {
+                display: block;
+                padding: .5rem 1rem;
             }
         }
     </style>
 </head>
 <body>
+<div>
+    <div data-collapse="tiny" data-animation="over-right" data-duration="400" role="banner" class="navbar test w-nav">
+        <div class="w-container">
+            <a href="./" class="logo w-nav-brand">
+                <div class="long-text">vanderbinckesbakfietsen</div>
+            </a>
+            <nav role="navigation" class="nav-menu w-nav-menu">
+                <a href="./" class="nav-link w-nav-link">Home</a>
+                <a href="/huur-bakfiets" class="nav-link huur w-nav-link">HUUR BAKFIETS</a>
+                <a href="#contact" class="nav-link w-nav-link">Contact</a>
+                <a href="#" class="close-x w-hidden-main w-hidden-medium w-hidden-small">×</a>
+            </nav>
+            <div class="menu-button w-hidden-main w-hidden-medium w-hidden-small w-clearfix w-nav-button">
+                <div class="menu-icon w-icon-nav-menu"></div>
+                <div class="menu-link">MENU</div>
+            </div>
+        </div>
+    </div>
+    <div id="posts" class="main-section">
+        <div class="container-3 w-container">
+            <h1 class="heading-2">Winkelmand</h1>
+            <div>
+                <div class="html-embed-3 w-embed">
+                    <div class="pb-5">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-lg-12 p-5 bg-white rounded shadow-sm mb-5">
+                                    <!--  Shopping cart table  -->
+                                    <div class="table-responsive">
+                                        <table class="table">
+                                            <thead>
+                                            <tr>
+                                                <th scope="col" class="border-0 bg-light">
+                                                    <div class="p-2 px-3 text-uppercase">Product</div>
+                                                </th>
+                                                <th scope="col" class="border-0 bg-light">
+                                                    <div class="py-2 text-uppercase">Prijs</div>
+                                                </th>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+                                            <!--dagen-->
+                                            <tr>
+                                                <th scope="row" class="border-0">
+                                                    <div class="p-2">
+                                                        <img src="https://assets.website-files.com/6069bb84af95c28548254801/606a82d058182502f282a17d_b4n1lpjl.png" alt="" class="img-fluid rounded shadow-sm" width="70">
+                                                        <div class="ml-3 d-inline-block align-middle">
+                                                            <h5 class="mb-0">
+                                                                <a href="#" class="text-dark d-inline-block align-middle" th:text=" ${huur.Dagen} + ' dag(en)'"></a>
+                                                            </h5>
+                                                        </div>
+                                                    </div>
+                                                </th>
+                                                <td class="border-0 align-middle"><strong th:text=" '€' + ${#numbers.formatDecimal(huur.Huurprijs, 0, 'COMMA', 2, 'COMMA')} "></strong></td>
+                                            </tr>
+                                            <!--bakfiets-->
+                                            <tr>
+                                                <th scope="row" class="border-0">
+                                                    <div class="p-2">
+                                                        <img th:src="${bakfiets.image}" alt="" class="img-fluid rounded shadow-sm" width="70">
+                                                        <div class="ml-3 d-inline-block align-middle">
+                                                            <h5 class="mb-0">
+                                                                <a href="#" class="text-dark d-inline-block align-middle" th:text="${bakfiets.Naam}"></a>
+                                                            </h5>
+                                                        </div>
+                                                    </div>
+                                                </th>
+                                                <td class="border-0 align-middle"><strong th:text=" '€' + ${#numbers.formatDecimal(bakfiets.Prijs, 0, 'COMMA', 2, 'COMMA')} "></strong></td>
+                                            </tr>
 
-<h2>Checkout</h2>
-<div class="row">
-    <div class="col-75">
-
-        <div class="container">
-            <h4>Cart <span class="price" style="color:black"><i class="fa fa-shopping-cart"></i> <b></b></span></h4>
-
-
-
-            <p> <a href="#" th:text=" ${huur.Dagen} + ' dag(en)'"></a>  <span class="price" th:text=" '€' + ${#numbers.formatDecimal(huur.Huurprijs, 0, 'COMMA', 2, 'COMMA')} "></span></p>
-
-            <p> <a href="#" th:text="${bakfiets.Naam}"></a>  <span class="price" th:text="'€' + ${#numbers.formatDecimal(bakfiets.Prijs, 0, 'COMMA', 2, 'COMMA')} "></span></p>
-
-            <p th:each="option : ${options}">
-                <a href="#" th:text="${option.Naam}"></a>  <span class="price" th:text=" '€' + ${#numbers.formatDecimal(option.Prijs, 0, 'COMMA', 2, 'COMMA')} "></span>
-            </p>
+                                            <!--optionals-->
+                                            <tr th:each="option : ${options}">
+                                                <th scope="row" class="border-0">
+                                                    <div class="p-2">
+                                                        <img th:src="${option.image}" alt="" class="img-fluid rounded shadow-sm" width="70">
+                                                        <div class="ml-3 d-inline-block align-middle">
+                                                            <h5 class="mb-0">
+                                                                <a href="#" class="text-dark d-inline-block align-middle" th:text="${option.Naam}"></a>
+                                                            </h5>
+                                                        </div>
+                                                    </div>
+                                                </th>
+                                                <td class="border-0 align-middle"><strong th:text=" '€' + ${#numbers.formatDecimal(option.Prijs, 0, 'COMMA', 2, 'COMMA')} "></strong></td>
+                                            </tr>
 
 
-            <hr>
-            <p>Totaal <span class="price" style="color:black" >  <b th:text="'€' + ${#numbers.formatDecimal(calculatie, 0, 'COMMA', 2, 'COMMA')}"></b></span></p>
-
-
-
-
-            <!--<tr th:each="option : ${options}">
-                <td th:text="${option.productId}">1</td>
-                <td><a href="#" th:text="${option.Naam}">Naam ...</a></td>
-                <td th:text="${option.Prijs}">Prijs ...</td>
-            </tr>-->
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    <!--  End  -->
+                                    <hr>
+                                    <div class="col-lg-6">
+                                        <div class="bg-light rounded-pill px-4 py-3 text-uppercase font-weight-bold">Overzicht bestelling </div>
+                                        <div class="p-4">
+                                            <ul class="list-unstyled mb-4">
+                                                <li class="d-flex justify-content-between py-3  "><strong class="text-muted">Totaal</strong>
+                                                    <h5 class="font-weight-bold" th:text="'€' + ${#numbers.formatDecimal(calculatie, 0, 'COMMA', 2, 'COMMA')}"></h5>
+                                                </li>
+                                            </ul>
+                                            <a href="#" class="btn btn-dark rounded-pill py-2 btn-block">Ga naar checkout</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="contact" class="main-section dark">
+        <div class="w-container">
+            <div class="section-heading">
+                <h2 class="white">Blijf in contact</h2>
+                <div class="med-divider"></div>
+            </div>
+            <div class="form-wrapper w-form">
+                <form id="email-form" name="email-form" data-name="Email Form" class="w-clearfix"><input type="email" id="email" name="email" data-name="Email" placeholder="Vul je email adres in" maxlength="256" required="" class="field w-input"><input type="submit" value="Submit" data-wait="Please wait..." class="submit-button w-button"></form>
+                <div class="success-message w-form-done">
+                    <p>Thank you! Your submission has been received!</p>
+                </div>
+                <div class="w-form-fail">
+                    <p>Oops! Something went wrong while submitting the form</p>
+                </div>
+            </div>
+        </div>
+        <div class="footer-section">
+            <div class="w-container">
+                <div class="w-row">
+                    <div class="w-col w-col-4 w-col-small-4">
+                        <a href="./" class="footer-logo w-inline-block">
+                            <div class="long-text">vanderbinckesbakfietsen</div>
+                        </a>
+                    </div>
+                    <div class="footer-links w-col w-col-8 w-col-small-8">
+                        <a href="./" class="footer-link">Home</a>
+                        <a href="/huur-bakfiets" class="footer-link">HUUR BAKFIETS</a>
+                        <a href="#contact" class="footer-link">Contact</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-
+<script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6069bb84af95c28548254801" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="https://assets.website-files.com/6069bb84af95c28548254801/js/webflow.3ecba2dec.js" type="text/javascript"></script>
+<!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
 </html>
